--- a/yaml/oke-mysql.yaml
+++ b/yaml/oke-mysql.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: oke-mysql
+  namespace: default
   labels:
     app: oke-mysql
 spec:
@@ -16,6 +17,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: oke-mysql
+  namespace: default
   labels:
     app: oke-mysql
 spec:
