--- a/yaml/oke-sample.yaml
+++ b/yaml/oke-sample.yaml
@@ -37,7 +37,7 @@ spec:
         image: shiftyou/oke-sample
         env:
         - name: MYSQL_SERVICE_HOST
-          value: oke-mysql
+          value: oke-mysql.default
         - name: MYSQL_SERVICE_USER
           value: test
         - name: MYSQL_SERVICE_PASSWORD
