--- a/yaml/oke-mysql.yaml
+++ b/yaml/oke-mysql.yaml
@@ -1,18 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: oke-mysql
-  namespace: default
-  labels:
-    app: oke-mysql
-spec:
-  ports:
-  - port: 3306
-  selector:
-    app: oke-mysql
-  type: ClusterIP
-
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -39,4 +24,18 @@ spec:
             name: oke-mysql
           env:
           - name: MYSQL_ROOT_PASSWORD
-            value: password
+            value: mypassword
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: oke-mysql
+  namespace: default
+  labels:
+    app: oke-mysql
+spec:
+  ports:
+  - port: 3306
+  selector:
+    app: oke-mysql
+  type: ClusterIP
